<resources>
    <string name="app_name">NoError</string>
    <string name="authorize_web">通过web页授权</string>
    <string name="open_system_photo">打开系统相册并分享</string>
    <string name="share_to_aweme">启动分享</string>
    <string name="set_default_title">设置默认话题</string>
    <string name="media_path">路径</string>

    <string name="add_photo_video">添加相片或视频</string>
    <string name="clear">清空</string>
    <string name="image">照片</string>
    <string name="video">视频</string>
    <string name="auth_success">授权成功</string>
    <string name="share_success">分享成功</string>
    <string name="scope_hint">必选权限(以 , 号间隔)</string>
    <string name="optional_scope">可选权限，默认不选（以 , 号间隔)</string>
    <string name="optional_1_scope">可选权限，默认选择（以 , 号间隔)</string>
    <string name="set_scope_btn">设置</string>

    <string name="share_to_aweme_with_shareid_no_callbacK">启动带shareId无回调</string>
    <string name="share_to_aweme_with_shareid_callback">启动带shareId有回调</string>
    <string name="share_user_file_provider">使用FileProvider=</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_movie_name">电影名字</string>
    <string name="_tv_douban_score">豆瓣评分：</string>
    <string name="tv_movie_type">电影类型</string>
    <string name="tv_douban_score">6.8</string>
    <string name="_tv_release_time">上映时间：</string>
    <string name="tv_release_time">2022-07-29</string>
    <string name="tv_movie_icon">电影海报</string>
    <string name="tv_movie_hot">1293.1万</string>
    <string name="_tv_movie_hot">热度：</string>
    <string name="text_movie">电影</string>
    <string name="tv_play">电视剧</string>
    <string name="variety">综艺</string>

    <!--bottom navigation-->
    <string name="menu_add">拍摄</string>
    <string name="menu_user">我的</string>
    <string name="menu_list">榜单</string>
    <string name="tv_area">大陆</string>
    <string name="_tv_area">上映地域：</string>
    <string name="tv_actor">演员</string>
    <string name="_tv_actor">主演：</string>
    <string name="tv_director">导演</string>
    <string name="_tv_director">导演：</string>
    <string name="tv_rank">排行</string>
    <string name="tv_list_version">榜单版本</string>
    <string name="tv_list_rule">榜单规则</string>
    <string name="tv_en_name">英文名称</string>
    <string name="_tv_args">类型：</string>
    <string name="tv_args">剧情、爱情</string>
    <string name="tv_version">第140期</string>
    <string name="tv_start_time">22.08.01</string>
    <string name="tv_mark">---</string>
    <string name="tv_end_time">22.08.08</string>

    <dimen name="teleplayTextSizeSmall">12sp</dimen>
    <dimen name="teleplayTextSizeBig">14sp</dimen>

    <dimen name="movieTextSizeSmall">12sp</dimen>
    <dimen name="movieTextSizeBig">14sp</dimen>

    <dimen name="varietyTextSizeSmall">12sp</dimen>
    <dimen name="varietyTextSizeBig">14sp</dimen>
</resources>