<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/_tv_teleplay_hot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_tv_movie_hot"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/_tv_release_time"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_teleplay_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_movie_name"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />


            <ImageView
                android:id="@+id/iv_teleplay_icon"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/tv_movie_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_list" />

            <TextView
                android:id="@+id/tv_teleplay_release_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_release_time"
                app:layout_constraintBottom_toBottomOf="@+id/_tv_release_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/_tv_release_time"
                app:layout_constraintTop_toTopOf="@+id/_tv_release_time" />

            <TextView
                android:id="@+id/tv_teleplay_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_movie_type"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/tv_teleplay_name"
                app:layout_constraintVertical_bias="0.0" />


            <TextView
                android:id="@+id/_tv_release_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_tv_release_time"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/tv_teleplay_type"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.25" />

            <TextView
                android:id="@+id/tv_teleplay_hot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_movie_hot"
                app:layout_constraintBottom_toBottomOf="@+id/_tv_teleplay_hot"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/_tv_teleplay_hot"
                app:layout_constraintTop_toTopOf="@+id/_tv_teleplay_hot" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>