<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--海报图片-->
            <!--ImageView增加圆角需要外套一层CardView-->
            <androidx.cardview.widget.CardView
                android:id="@+id/Card"
                android:layout_width="100dp"
                android:layout_height="140dp"
                app:cardCornerRadius="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.31" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintGuide_percent="0.13" />

                    <ImageView
                        android:id="@+id/variety_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/image"
                        android:radius="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        app:srcCompat="@drawable/ic_pic"
                        tools:ignore="ImageContrastCheck" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:background="@android:color/holo_orange_light"
                        app:layout_constraintBottom_toTopOf="@+id/guideline2"
                        app:layout_constraintEnd_toStartOf="@+id/guideline4"
                        app:layout_constraintStart_toStartOf="@+id/variety_icon"
                        app:layout_constraintTop_toTopOf="@+id/variety_icon" />

                    <TextView
                        android:id="@+id/tv_variety_rank"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="Top 1"
                        android:textColor="#E41515"
                        android:textSize="10sp"
                        app:layout_constraintBottom_toBottomOf="@+id/view"
                        app:layout_constraintEnd_toEndOf="@+id/view"
                        app:layout_constraintStart_toStartOf="@+id/view"
                        app:layout_constraintTop_toTopOf="@+id/view" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <!--电影名称-->
            <TextView
                android:id="@+id/tv_variety_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_movie_name"
                android:textSize="@dimen/varietyTextSizeBig"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/Card"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_variety_director"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_director"
                android:textSize="@dimen/varietyTextSizeSmall"
                app:layout_constraintBottom_toBottomOf="@+id/_tv_variety_director"
                app:layout_constraintStart_toEndOf="@+id/_tv_variety_director"
                app:layout_constraintTop_toTopOf="@+id/_tv_variety_director" />

            <TextView
                android:id="@+id/_tv_variety_director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/_tv_director"
                android:textSize="@dimen/varietyTextSizeSmall"
                app:layout_constraintStart_toStartOf="@+id/tv_variety_en_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_variety_en_name" />

            <View
                android:id="@+id/line"
                android:layout_width="1dp"
                android:layout_height="130dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="100dp"
                android:layout_marginTop="10dp"
                android:background="#AFABAB" />

            <ImageView
                android:id="@+id/movie_hot"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="2dp"
                android:contentDescription="@string/_tv_movie_hot"
                app:layout_constraintBottom_toBottomOf="@+id/tv_variety_hot"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/line"
                app:layout_constraintTop_toTopOf="@+id/tv_variety_hot"
                app:srcCompat="@drawable/fire" />

            <TextView
                android:id="@+id/tv_variety_hot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/tv_movie_hot"
                android:textColor="#DD2C00"
                android:textSize="@dimen/varietyTextSizeBig"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/movie_hot"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_variety_en_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tv_en_name"
                android:textSize="@dimen/varietyTextSizeSmall"
                app:layout_constraintStart_toStartOf="@+id/tv_variety_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_variety_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>