<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--海报图片-->
            <!--ImageView增加圆角需要外套一层CardView-->
            <androidx.cardview.widget.CardView
                android:id="@+id/Card"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                app:cardCornerRadius="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/movie_icon"
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    android:radius="10dp"
                    android:contentDescription="@string/image"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/ic_pic" />

                <View
                    android:id="@+id/rectangles"
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBotton_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:background="#FFC000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Top 1"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />

            </androidx.cardview.widget.CardView>

            <!--电影名称-->
            <TextView
                android:id="@+id/movie_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_movie_name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/Card"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.0" />

            <!--电影导演-->
            <TextView
                android:id="@+id/movie_director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="导演："
                app:layout_constraintStart_toEndOf="@+id/Card"
                app:layout_constraintTop_toBottomOf="@+id/movie_name"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/_movie_director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="导演名字"
                app:layout_constraintStart_toEndOf="@+id/movie_director"
                app:layout_constraintTop_toBottomOf="@+id/movie_name"
                android:layout_marginStart="0dp"
                android:layout_marginTop="12dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.0" />

            <!--电影演员-->
            <TextView
                android:id="@+id/movie_actor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="主演："
                app:layout_constraintStart_toEndOf="@+id/Card"
                app:layout_constraintTop_toBottomOf="@+id/movie_director"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/_movie_actor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="演员名1"
                app:layout_constraintStart_toEndOf="@+id/movie_actor"
                app:layout_constraintTop_toBottomOf="@+id/movie_director"
                android:layout_marginStart="0dp"
                android:layout_marginTop="5dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.0" />

            <!--上映区域-->
            <TextView
                android:id="@+id/tv_movie_release_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="上映区域："
                app:layout_constraintStart_toEndOf="@+id/Card"
                app:layout_constraintTop_toBottomOf="@+id/movie_actor"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintHorizontal_bias="0.0"/>

            <TextView
                android:id="@+id/movie_release_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="中国大陆"
                app:layout_constraintStart_toEndOf="@+id/tv_movie_release_area"
                app:layout_constraintTop_toBottomOf="@+id/movie_actor"
                android:layout_marginStart="0dp"
                android:layout_marginTop="5dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.0" />


            <!--上映时间-->
            <TextView
                android:id="@+id/tv_movie_release_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="上映时间："
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/Card"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_release_area"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/movie_release_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_release_time"
                android:layout_marginStart="0dp"
                android:layout_marginTop="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/tv_movie_release_time"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_release_area" />

            <View
                android:id="@+id/line"
                android:layout_width="1dp"
                android:layout_height="130dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBotton_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="100dp"
                android:layout_marginTop="10dp"
                android:background="#AFABAB" />

            <ImageView
                android:id="@+id/movie_hot"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintTop_toTopOf="@id/tv_movie_hot"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintBottom_toBottomOf="@id/tv_movie_hot"
                app:layout_constraintStart_toEndOf="@+id/line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:srcCompat="@drawable/fire" />

            <TextView
                android:id="@+id/tv_movie_hot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_movie_hot"
                android:textSize="18dp"
                android:textColor="#FF0000"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/movie_hot"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>